--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
         </div>
       </div>
       <div class="logo-container" style="margin: 30px 0;">
-        <img src="/img/blizzard.png" alt="" class="logo" width="124px">
+        <img src="img/blizzard.png" alt="" class="logo" width="124px">
       </div>
       <div class="links-container">
         <div class="links d-flex text-upper" style="flex-wrap: wrap; justify-content: center;">
