--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/bg-video.css">
   <link rel="stylesheet" href="css/text-sizes.css">
   <link rel="stylesheet" href="css/dividers.css">
-  <link href="http://db.onlinewebfonts.com/c/81c243c84afda2f4f48b03f80476e2be?family=Semplicita" rel="stylesheet"
+  <link href="https://db.onlinewebfonts.com/c/81c243c84afda2f4f48b03f80476e2be?family=Semplicita" rel="stylesheet"
     type="text/css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <title>World of Warcraft Clone - Alexander Auermaa</title>
